--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset=utf-8>
-  <title>RigNet Online Print Order Form</title>
+  <title>Online Print Order Form</title>
   <script src="modernizr.js" type="text/javascript" charset="utf-8"></script>
   <link rel="stylesheet" href="/application.css" type="text/css" charset="utf-8">
 </head>
